<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BravoClient</string>
    <string name="home">Home</string>
    <string name="cards">Cards</string>
    <string name="rewards">Rewards</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_cards">CardsActivity</string>
    <string name="title_activity_scanner">ScannerActivity</string>
    <string name="exit_app_toast">Press again to exit</string>
    <string name="logout_toast">Logout Successfully</string>
    <string name="invalid_username">Please verify the email</string>
    <string name="invalid_password">Please verify the password</string>
    <string name="send_money_invalid_email">Please verify your email address</string>
    <string name="send_money_invalid_amount">Please verify your amount</string>
    <string name="reg_password_not_match">Password is not match</string>
    <string name="reg_invalid_username">Please type in the valid email</string>
    <string name="reg_invalid_password">Password should not be empty or less than 6 characters</string>
    <string name="reg_invalid_street">Please verify the street</string>
    <string name="reg_invalid_city">Please verify the city</string>
    <string name="reg_invalid_zipCode">Please verify the zipCode</string>
    <string name="reload_invalid_firstname">Please verify your firstname</string>
    <string name="reload_invalid_lastname">Please verify your lastname</string>
    <string name="reload_invalid_cardNumber">Please verify your card number</string>
    <string name="reload_invalid_cvn">Please verify your cvn</string>
    <string name="reload_invalid_street">Please verify street name</string>
    <string name="reload_invalid_city">Please verify city name</string>
    <string name="reload_invalid_zip_code">Please verify Zip Code</string>
    <string name="reload_invalid_amount">Please verify amount</string>
    <string name="home_scanner_positive_button">Go Search</string>
    <string name="home_scanner_negative_button">Cancel</string>
    <string name="balance">Balance</string>
    <string name="pay">Pay</string>
    <string name="reload">Reload</string>
    <string name="self_checkout">Self Checkout</string>
    <string name="money_transfer">Money Transfer</string>
    <string name="cards_list">Cards List</string>
    <string name="transaction_history">Transaction History</string>
    <string name="currency">$ </string>
    <string name="title_money_transfer_dialog">Money Transfer</string>
    <string name="IP_Address">https://50.156.103.190:8181/subAccountAPI/</string>
    <!-- <string name="IP_Address">http://10.0.2.2:8080/subAccountAPI/</string> -->
    <string name="network_timeout">15</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_cards_list">Cards List</string>
    <string name="title_activity_reload_money">Reload Money</string>
    <string name="failure_get_card_list">Failed to get card list</string>
    <string name="failure_get_transaction_history">Failed to get transaction history</string>
    <string name="faulure_send_money">Failed to send money</string>
    <string name="failure_start_scanner">Cannot start scanner</string>
    <string name="timeout_add_card">Adding new card timeout</string>
    <string name="async_login">Logging in</string>
	<string name="async_logout">Logging out</string>
	<string name="async_get_card_list">Getting card list</string>
	<string name="async_register">Registering</string>
	<string name="async_reload_money">Reloading money</string>
	<string name="async_send_money">Sending money</string>
	<string name="async_get_transaction_history">Getting transaction history</string>
	
	    
    <string name="note_send_money_email">Money will be deposited to the primary card of recipient</string>
    <string name="note_send_money_scanner">Money will by depostied to current card of recipient</string>
    <string name="note_send_money_choose_method">Please choose transfer methods</string>
    <string name="send_money_email_or_scanner_text">OR</string>
    <string name="alert_send_money_confirm_scanner">Are you sure to use scanner instead of using email address?</string>
    <string name="alert_send_money_confirm_info_title">Send money details</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_confirm">Confirm</string>

    <!-- The array list of operations of money transfer -->
    <string-array name="money_transfer_array">
        <item>Send Money</item>
        <item>Get Money</item>
    </string-array>
    <!-- The array list of states or provinces -->
    <string-array name="state_array">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <string-array name="reload_money_expiration_month">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="reload_money_expiration_year">
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>

    <string name="state_promote">Choose State</string>
    <string name="reload_money_expiration_date">Choose Expiration Date</string>

    <color name="solid_main">#FF1E2F41</color>
    <color name="solid_header">#84252C</color>
    <color name="solid_list_item">#FF1E2F41</color>
    <color name="outline_icon">#729896</color>
    <color name="lable_text_color">#FFFFFF</color>
    <color name="divider">#FFFFFF</color>

    <string name="title_activity_add_card">AddCardActivity</string>
    <string name="title_activity_send_money">SendMoneyActivity</string>
    <string name="title_activity_transaction_list">TransactionListActivity</string>

</resources>